# Looksyk

./: .gitignore  .gitmodules  .tool-versions  .version.check.json  CONTRIBUTING.md  Dockerfile  PKGBUILD  Readme.md  build-appimage.sh  build-flatpak.sh  build.sh  create_desktop_shortcut.sh  de.sebastianruziczka.looksyk.local.yml  de.sebastianruziczka.looksyk.metainfo.xml  de.sebastianruziczka.looksyk.yml  docker-compose.local-build.yml  docker-compose.yml  run-ci-manual.sh
backend/: Cargo.toml  docker-compose.yml  nginx.conf
backend/benches/: parser_bench.rs
backend/data/config/: config.json
backend/data/journals/: 2024_07_17.md  2024_07_18.md
backend/data/pages/: project1.md
backend/src/: configuration.rs  lib.rs  main.rs  state.rs
backend/src/io/: actix.rs  cargo.rs  date.rs  hash.rs  human.rs  markdown.rs  mod.rs  state.rs
backend/src/io/cli/: dtos.rs  endpoints.rs  mapper.rs  mod.rs
backend/src/io/fs/: asset_cache_loader.rs  basic_file.rs  basic_folder.rs  config.rs  env.rs  media.rs  mod.rs  pages.rs  paths.rs  root_path.rs  version.rs
backend/src/io/http/: block_properties.rs  dtos.rs  endpoints.rs  help.rs  link_encoding.rs  mapper.rs  mod.rs  page_type.rs  routes.rs
backend/src/io/plot/: mod.rs
backend/src/looksyk/: builder.rs  datatypes.rs  favourite.rs  markdown.rs  mod.rs  model.rs  page_index.rs  parser.rs  plot.rs  query.rs  reader.rs  renderer.rs  search.rs  serializer.rs  title.rs
backend/src/looksyk/builtinpage/: asset_metainfo_table.rs  assets_overview.rs  mod.rs  (+7 more)
backend/src/migration/: migration_1_10_2.rs  migration_1_14_0.rs  migration_1_14_3.rs  migration_1_18_0.rs  migration_1_20_0.rs  migrator.rs  mod.rs  model.rs
backend/src/state/: application_state.rs  asset_cache.rs  block.rs  block_properties.rs  journal.rs  markdown_file.rs  mod.rs  state.rs  tag.rs  todo.rs  userpage.rs
backend/src/sync/: mod.rs  todos.md
backend/tests/: test_input_long.txt  test_input_medium.txt  test_input_short.txt
(+389 files in other folders)
