[package]
name = "looksyk"
version = "1.18.1"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-multipart = "0.7.2"
actix-files = "0.6.8"
sha3 = "0.10.8"
chrono = "0.4.42"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
serde_json = "1.0.145"
mime = "0.3.17"
# Cli Parser
clap = { version = "4.5.47", features = ["derive"] }
# format large numbers in human-readable format
humansize = "2.1.3"
# Logging
env_logger = "0.11.8"
# Home dir
dirs = "6.0.0"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "parser_bench"
harness = false
