[package]
name = "looksyk"
version = "1.19.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
actix-multipart = "0.7.2"
actix-files = "0.6.9"
sha3 = "0.10.8"
chrono = "0.4.43"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
serde_json = "1.0.149"
mime = "0.3.17"
# Cli Parser
clap = { version = "4.5.55", features = ["derive"] }
# format large numbers in human-readable format
humansize = "2.1.3"
# Logging
env_logger = "0.11.8"
# Home dir
dirs = "6.0.0"
# Plotting library
plotters = { version = "0.3.7", features = ["chrono"] }
png = "0.17"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "parser_bench"
harness = false
